fixed overflow issue

--- a/style.scss
+++ b/style.scss
@@ -1,42 +1,37 @@
-
-
-@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,700;0,800;0,900;1,200;1,300&family=Rubik+Iso&family=Space+Grotesk:wght@400;500;600;700&display=swap');
-:root{
-  --dark-mode:#000;
-  --light-mode:#fff;
-  --background:#2d2d2d;
-  font-size: min(2vw,1rem);
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,700;0,800;0,900;1,200;1,300&family=Rubik+Iso&family=Space+Grotesk:wght@400;500;600;700&display=swap");
+:root {
+  --dark-mode: #000;
+  --light-mode: #fff;
+  --background: #2d2d2d;
+  font-size: min(2vw, 1rem);
 }
-$dark-mode:#000;
-$light-mode:#fff;
+$dark-mode: #000;
+$light-mode: #fff;
 $acent: #ff004d;
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins','Rubik';
+  font-family: "Poppins", "Rubik";
   scroll-behavior: smooth;
   scroll-padding-top: 3rem;
 }
 
-.toggle-mode{
-  --dark-mode:#fff;
-  --light-mode:#000;
-  --background:#dcdbdb;
-
+.toggle-mode {
+  --dark-mode: #fff;
+  --light-mode: #000;
+  --background: #dcdbdb;
 }
-
-
 
 body {
   background-color: var(--dark-mode);
-  widows: 100%;
+  width: 100%;
   height: 100vh;
   padding: 1rem 6rem;
   color: var(--light-mode);
   overflow-x: hidden;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
   header {
     position: relative;
     width: 100%;
@@ -55,7 +50,7 @@ body {
       padding: 0 6rem;
       top: 0;
       left: 0;
-      background-color:var(--background);
+      background-color: var(--background);
       filter: blur(5);
       z-index: 999;
       .logo {
@@ -100,18 +95,15 @@ body {
             }
           }
         }
-        .mode-chnager{
+        .mode-chnager {
           cursor: pointer;
           .fa-sun:before {
-            color:var(--light-mode);
+            color: var(--light-mode);
           }
-          
         }
       }
-      
-     
     }
-    .intro{
+    .intro {
       width: 100%;
       padding: 10rem 0;
       h1 {
@@ -130,9 +122,10 @@ body {
   .about {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    justify-content: center;
     gap: 2rem;
-    padding: 3rem 0 ;
+    padding: 3rem 0;
     transition: 2s;
     .image {
       min-height: 500px;
@@ -144,9 +137,9 @@ body {
       }
     }
     .info {
-     display: flex;
-     flex-direction: column;
-     gap: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
       h1 {
         font-size: 3.5rem;
       }
@@ -214,7 +207,7 @@ body {
     transition: all 0.3s ease;
     padding: 3rem 0;
     // transform: translateX(200%);
-   
+
     transition: 2s;
     h1 {
       font-size: 3.5rem;
@@ -223,7 +216,8 @@ body {
     .project {
       width: 100%;
       display: grid;
-      grid-template-columns:repeat(auto-fit,minmax(300px,1fr)) ;
+      grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+      justify-content: center;
       gap: 3rem;
       transition: 2s ease;
       a {
@@ -239,7 +233,7 @@ body {
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
-        transition: all .5s cubic-bezier(0.98, 0, 0.9, 1.34);
+        transition: all 0.5s cubic-bezier(0.98, 0, 0.9, 1.34);
         &:nth-child(n + 4) {
           height: 0;
         }
@@ -285,7 +279,7 @@ body {
         }
       }
     }
-    .btn{
+    .btn {
       width: 100%;
       display: flex;
       justify-content: center;
@@ -307,18 +301,22 @@ body {
         }
       }
     }
- 
   }
 
   .contact {
     width: 100%;
-    display: flex;
-    gap: 2rem;
+    // display: flex;
+    // justify-content: space-between;
+    // flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    justify-content: center;
+    gap: 3rem;
+    // gap: 2rem;
     padding: 3rem 0 15rem 0;
     margin-bottom: 100px;
     // opacity: 0;
     .contact-option {
-      width: 50%;
       h1 {
         font-size: 3.5rem;
         font-weight: 700;
@@ -345,14 +343,13 @@ body {
           gap: 1rem;
           margin-bottom: 2rem;
           .social {
-            width: 50px;
-            height: 50px;
+            padding: 1rem;
             border-radius: 50%;
             display: grid;
             place-content: center;
             background: var(--background);
             cursor: pointer;
-            a{
+            a {
               text-decoration: none;
               color: var(--light-mode);
             }
@@ -385,7 +382,6 @@ body {
     }
 
     .contact-info {
-      width: 100%;
       form {
         display: flex;
         flex-direction: column;
@@ -424,16 +420,13 @@ body {
     }
   }
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 10px;
-
 }
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   background-color: var(--light-mode);
 }
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background: $acent;
   border-radius: 10px;
 }
-
-
